--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 <div id="toptitle">
 <h1>CSE 891-002: Deep Learning in Biometrics</h1>
 </div>
+<ul>
+<li><p>Time: M/W 3-4:20pm</p>
+</li>
+<li><p>Place: Wells Hall Rooms A301</p>
+</li>
+<li><p>Instructor: Cunjian Chen (cunjian@msu.edu)</p>
+</li>
+</ul>
 <h2>Course Description</h2>
 <p>This will be a seminar-style course where students will be assigned a number of papers to read. Students will then be expected to submit critiques for these papers as well as present these papers during the lecture. The papers will cover salient topics in biometrics and deep learning. These include concepts in face detection and alignment, face recognition, face anti-spoofing, iris recognition, fingerprint recognition and deep learning. The project component of this course will test the student’s ability to design deep learning solutions for biometrics applications.</p>
 <h2>Main References</h2>
@@ -23,9 +31,29 @@
 </li>
 </ul>
 <h2>Tentative Schedule</h2>
+<ul>
+<li><p>Introduction to Biometrics</p>
+</li>
+<li><p>Convolutional Neural Networks </p>
+</li>
+<li><p>Generative Adversarial Networks </p>
+</li>
+<li><p>Face Detection</p>
+</li>
+<li><p>Face Alignment</p>
+</li>
+<li><p>Face Recognition</p>
+</li>
+<li><p>Fingerprint Recognition</p>
+</li>
+<li><p>Iris Recognition</p>
+</li>
+<li><p>Presentation Attack Detection</p>
+</li>
+</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-11-12 13:50:04 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2019-11-12 14:06:41 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
