--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <div id="toptitle">
 <h1>CSE 891-002: Deep Learning in Biometrics</h1>
 </div>
+<h2>Overview</h2>
 <ul>
 <li><p>Time: M/W 3-4:20pm</p>
 </li>
@@ -22,7 +23,7 @@
 </ul>
 <h2>Course Description</h2>
 <p>This will be a seminar-style course where students will be assigned a number of papers to read. Students will then be expected to submit critiques for these papers as well as present these papers during the lecture. The papers will cover salient topics in biometrics and deep learning. These include concepts in face detection and alignment, face recognition, face anti-spoofing, iris recognition, fingerprint recognition and deep learning. The project component of this course will test the student’s ability to design deep learning solutions for biometrics applications.</p>
-<h2>Main References</h2>
+<h2>Optional Textbooks</h2>
 <p>This will be a seminar-style course, where students will be assigned a number of papers to read. The following textbooks are optional.</p>
 <ul>
 <li><p>Anil Jain, Arun Ross, and Karthik Nandakumar, Introduction to Biometrics, Springer, 2011.</p>
@@ -31,29 +32,72 @@
 </li>
 </ul>
 <h2>Tentative Schedule</h2>
+<table id="TABLENAME">
+<tr class="r1"><td class="c1"><b>Event Type</b>  </td><td class="c2"> <b>Date</b> </td><td class="c3"> <b>Description</b> </td><td class="c4"> <b>Course Materials</b> </td></tr>
+<tr class="r2"><td class="c1">Lecture 1 </td><td class="c2"> 1/6 </td><td class="c3"> Introduction to Biometrics, part I </td><td class="c4">  </td></tr>
+<tr class="r3"><td class="c1">Lecture 2 </td><td class="c2"> 1/8 </td><td class="c3"> Introduction to Biometrics, part II </td><td class="c4">  </td></tr>
+<tr class="r4"><td class="c1">Lecture 3 </td><td class="c2"> 1/13 </td><td class="c3"> Convolutional Neural Networks <br /> <font color="DarkMagenta">Homework 1 out</font> </td><td class="c4">  </td></tr>
+<tr class="r5"><td class="c1">Discussion </td><td class="c2"> 1/15 </td><td class="c3"> Convolutional Neural Networks </td><td class="c4">  </td></tr>
+<tr class="r6"><td class="c1">Lecture 4 </td><td class="c2"> 1/20 </td><td class="c3"> Generative Adversarial Networks <br /> <font color="DarkMagenta">Homework 1 due</font> <br /> <font color="DarkMagenta">Homework 2 out</font> </td><td class="c4">  </td></tr>
+<tr class="r7"><td class="c1">Discussion </td><td class="c2"> 1/22 </td><td class="c3"> Generative Adversarial Networks </td><td class="c4">  </td></tr>
+<tr class="r8"><td class="c1">Lecture 5 </td><td class="c2"> 1/27 </td><td class="c3"> Face Detection <br /> <font color="DarkMagenta">Homework 2 due</font> <br /> <font color="DarkMagenta">Homework 3 out</font> </td><td class="c4">  </td></tr>
+<tr class="r9"><td class="c1">Discussion </td><td class="c2"> 1/29 </td><td class="c3"> Face Detection </td><td class="c4">  </td></tr>
+<tr class="r10"><td class="c1">Lecture 6 </td><td class="c2"> 2/3 </td><td class="c3"> Face Alignment <br /> <font color="DarkMagenta">Homework 3 due</font> <br /> <font color="DarkMagenta">Homework 4 out</font> </td><td class="c4">  </td></tr>
+<tr class="r11"><td class="c1">Discussion </td><td class="c2"> 2/5 </td><td class="c3"> Face Detection </td><td class="c4">  </td></tr>
+<tr class="r12"><td class="c1">Lecture 7 </td><td class="c2"> 2/10 </td><td class="c3"> Face Recognition, part I <br /> <font color="DarkMagenta">Homework 4 due</font> <br /> <font color="DarkMagenta">Homework 5 out</font> </td><td class="c4">  </td></tr>
+<tr class="r13"><td class="c1">Discussion </td><td class="c2"> 2/12 </td><td class="c3"> Face Recognition </td><td class="c4">  </td></tr>
+<tr class="r14"><td class="c1">Lecture 7 </td><td class="c2"> 2/17 </td><td class="c3"> Face Recognition, part II <br /> </td><td class="c4">  </td></tr>
+<tr class="r15"><td class="c1">Discussion </td><td class="c2"> 2/19 </td><td class="c3"> Face Recognition </td><td class="c4">  </td></tr>
+<tr class="r16"><td class="c1">Lecture 8 </td><td class="c2"> 2/24 </td><td class="c3"> Face Recognition, part III <br /> </td><td class="c4">  </td></tr>
+<tr class="r17"><td class="c1">Discussion </td><td class="c2"> 2/26 </td><td class="c3"> Face Recognition </td><td class="c4">  </td></tr>
+<tr class="r18"><td class="c1">Spring Break </td><td class="c2"> 3/2 </td><td class="c3"> No Class </td><td class="c4">  </td></tr>
+<tr class="r19"><td class="c1">Spring Break </td><td class="c2"> 3/4 </td><td class="c3"> No Class </td><td class="c4">  </td></tr>
+<tr class="r20"><td class="c1">Lecture 9 </td><td class="c2"> 3/9 </td><td class="c3"> Fingerprint Recognition (Guest Lecture) <br /> <font color="DarkMagenta">Homework 5 due</font> <br /> <font color="DarkMagenta">Homework 6 out</font> </td><td class="c4">  </td></tr>
+<tr class="r21"><td class="c1">Discussion </td><td class="c2"> 3/11 </td><td class="c3"> Fingerprint Recognition  </td><td class="c4">  </td></tr>
+<tr class="r22"><td class="c1">Lecture 10 </td><td class="c2"> 3/16 </td><td class="c3"> Iris Recognition <br /> <font color="DarkMagenta">Homework 6 due</font> <br /> <font color="DarkMagenta">Homework 7 out</font> </td><td class="c4">  </td></tr>
+<tr class="r23"><td class="c1">Discussion </td><td class="c2"> 3/18 </td><td class="c3"> Iris Recognition  </td><td class="c4">  </td></tr>
+<tr class="r24"><td class="c1">Lecture 11 </td><td class="c2"> 3/23 </td><td class="c3"> Face Presentation Attack Detection <br /> <font color="DarkMagenta">Homework 7 due</font> <br /> <font color="DarkMagenta">Homework 8 out</font> </td><td class="c4">  </td></tr>
+<tr class="r25"><td class="c1">Discussion </td><td class="c2"> 3/25 </td><td class="c3"> Face Presentation Attack Detection </td><td class="c4">  </td></tr>
+<tr class="r26"><td class="c1">Lecture 12 </td><td class="c2"> 3/30 </td><td class="c3">Iris Presentation Attack Detection <br /> <font color="DarkMagenta">Final Project Report out</font></td><td class="c4">  </td></tr>
+<tr class="r27"><td class="c1">Discussion </td><td class="c2"> 4/1 </td><td class="c3"> Iris Presentation Attack Detection </td><td class="c4">  </td></tr>
+<tr class="r28"><td class="c1">Lecture 13 </td><td class="c2"> 4/6 </td><td class="c3"> Fingerprint Presentation Attack Detection (Guest Lecture) </td><td class="c4">  </td></tr>
+<tr class="r29"><td class="c1">Discussion </td><td class="c2"> 4/8 </td><td class="c3"> Fingerprint Presentation Attack Detection </td><td class="c4">  </td></tr>
+<tr class="r30"><td class="c1">TBD </td><td class="c2"> 4/13 </td><td class="c3">  </td><td class="c4">  </td></tr>
+<tr class="r31"><td class="c1">TBD </td><td class="c2"> 4/15 </td><td class="c3">  <font color="DarkMagenta">Final Project Report due</font> </td><td class="c4">  </td></tr>
+<tr class="r32"><td class="c1">Final Presentation </td><td class="c2"> 4/20 </td><td class="c3">  </td><td class="c4">  </td></tr>
+<tr class="r33"><td class="c1">Final Presentation </td><td class="c2"> 4/22 </td><td class="c3">  </td><td class="c4">  </td></tr>
+<tr class="r34"><td class="c1">Final Presentation </td><td class="c2"> 4/27 </td><td class="c3">  </td><td class="c4">  </td></tr>
+<tr class="r35"><td class="c1">Final Presentation </td><td class="c2"> 4/29 </td><td class="c3">  </td><td class="c4">  
+</td></tr></table>
+<h2>References:</h2>
 <ul>
-<li><p>Introduction to Biometrics</p>
-</li>
-<li><p>Convolutional Neural Networks </p>
-</li>
-<li><p>Generative Adversarial Networks </p>
-</li>
 <li><p>Face Detection</p>
+<ul>
+<li><p>Methods: CascadeCNN, Faster-RCNN || SSD, YOLO, SSH, RetinaFace</p>
+</li>
+<li><p>Datasets: FDDB, <a href="http://shuoyang1213.me/WIDERFACE/WiderFace_Results.html">WIDER FACE</a></p>
+</li></ul>
 </li>
 <li><p>Face Alignment</p>
+<ul>
+<li><p>Methods: MTCNN</p>
+</li>
+<li><p>Datasets: 300W, 330-VW</p>
+</li></ul>
 </li>
 <li><p>Face Recognition</p>
+<ul>
+<li><p>Methods: DeepFace, DeepID, DeepID2, FaceNet || Center Loss, SphereFace, CosFace, ArcFace</p>
 </li>
-<li><p>Fingerprint Recognition</p>
+<li><p>Datasets: CASIA-Webface, VGGFace2 || LFW</p>
 </li>
-<li><p>Iris Recognition</p>
-</li>
-<li><p>Presentation Attack Detection</p>
+</ul>
+
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-11-12 14:06:41 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2019-11-21 21:41:56 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
