--- a/index.html
+++ b/index.html
@@ -40,30 +40,30 @@
 <tr class="r5"><td class="c1">Discussion </td><td class="c2"> 1/15 </td><td class="c3"> Convolutional Neural Networks </td><td class="c4">  </td></tr>
 <tr class="r6"><td class="c1">Lecture 4 </td><td class="c2"> 1/20 </td><td class="c3"> Generative Adversarial Networks <br /> <font color="DarkMagenta">Homework 1 due</font> <br /> <font color="DarkMagenta">Homework 2 out</font> </td><td class="c4">  </td></tr>
 <tr class="r7"><td class="c1">Discussion </td><td class="c2"> 1/22 </td><td class="c3"> Generative Adversarial Networks </td><td class="c4">  </td></tr>
-<tr class="r8"><td class="c1">Lecture 5 </td><td class="c2"> 1/27 </td><td class="c3"> Face Detection <br /> <font color="DarkMagenta">Homework 2 due</font> <br /> <font color="DarkMagenta">Homework 3 out</font> </td><td class="c4">  </td></tr>
+<tr class="r8"><td class="c1">Lecture 5 </td><td class="c2"> 1/27 </td><td class="c3"> Face Detection, part I <br /> <font color="DarkMagenta">Homework 2 due</font> <br /> <font color="DarkMagenta">Homework 3 out</font> </td><td class="c4">  </td></tr>
 <tr class="r9"><td class="c1">Discussion </td><td class="c2"> 1/29 </td><td class="c3"> Face Detection </td><td class="c4">  </td></tr>
-<tr class="r10"><td class="c1">Lecture 6 </td><td class="c2"> 2/3 </td><td class="c3"> Face Alignment <br /> <font color="DarkMagenta">Homework 3 due</font> <br /> <font color="DarkMagenta">Homework 4 out</font> </td><td class="c4">  </td></tr>
+<tr class="r10"><td class="c1">Lecture 6 </td><td class="c2"> 2/3 </td><td class="c3"> Face Detection, part II </td><td class="c4">  </td></tr>
 <tr class="r11"><td class="c1">Discussion </td><td class="c2"> 2/5 </td><td class="c3"> Face Detection </td><td class="c4">  </td></tr>
-<tr class="r12"><td class="c1">Lecture 7 </td><td class="c2"> 2/10 </td><td class="c3"> Face Recognition, part I <br /> <font color="DarkMagenta">Homework 4 due</font> <br /> <font color="DarkMagenta">Homework 5 out</font> </td><td class="c4">  </td></tr>
-<tr class="r13"><td class="c1">Discussion </td><td class="c2"> 2/12 </td><td class="c3"> Face Recognition </td><td class="c4">  </td></tr>
-<tr class="r14"><td class="c1">Lecture 7 </td><td class="c2"> 2/17 </td><td class="c3"> Face Recognition, part II <br /> </td><td class="c4">  </td></tr>
+<tr class="r12"><td class="c1">Lecture 7 </td><td class="c2"> 2/10 </td><td class="c3"> Face Alignment <br /> <font color="DarkMagenta">Homework 3 due</font> <br /> <font color="DarkMagenta">Homework 4 out</font> </td><td class="c4">  </td></tr>
+<tr class="r13"><td class="c1">Discussion </td><td class="c2"> 2/12 </td><td class="c3"> Face Alignment </td><td class="c4">  </td></tr>
+<tr class="r14"><td class="c1">Lecture 8 </td><td class="c2"> 2/17 </td><td class="c3"> Face Recognition, part I <br /> <font color="DarkMagenta">Homework 4 due</font> <br /> <font color="DarkMagenta">Homework 5 out</font> </td><td class="c4">  </td></tr>
 <tr class="r15"><td class="c1">Discussion </td><td class="c2"> 2/19 </td><td class="c3"> Face Recognition </td><td class="c4">  </td></tr>
-<tr class="r16"><td class="c1">Lecture 8 </td><td class="c2"> 2/24 </td><td class="c3"> Face Recognition, part III <br /> </td><td class="c4">  </td></tr>
+<tr class="r16"><td class="c1">Lecture 9 </td><td class="c2"> 2/24 </td><td class="c3"> Face Recognition, part II <br /> </td><td class="c4">  </td></tr>
 <tr class="r17"><td class="c1">Discussion </td><td class="c2"> 2/26 </td><td class="c3"> Face Recognition </td><td class="c4">  </td></tr>
-<tr class="r18"><td class="c1">Spring Break </td><td class="c2"> 3/2 </td><td class="c3"> No Class </td><td class="c4">  </td></tr>
+<tr class="r18"><td class="c1">Spring Break </td><td class="c2"> 3/2 </td><td class="c3"> No Class <br /> </td><td class="c4">  </td></tr>
 <tr class="r19"><td class="c1">Spring Break </td><td class="c2"> 3/4 </td><td class="c3"> No Class </td><td class="c4">  </td></tr>
-<tr class="r20"><td class="c1">Lecture 9 </td><td class="c2"> 3/9 </td><td class="c3"> Fingerprint Recognition (Guest Lecture) <br /> <font color="DarkMagenta">Homework 5 due</font> <br /> <font color="DarkMagenta">Homework 6 out</font> </td><td class="c4">  </td></tr>
-<tr class="r21"><td class="c1">Discussion </td><td class="c2"> 3/11 </td><td class="c3"> Fingerprint Recognition  </td><td class="c4">  </td></tr>
-<tr class="r22"><td class="c1">Lecture 10 </td><td class="c2"> 3/16 </td><td class="c3"> Iris Recognition <br /> <font color="DarkMagenta">Homework 6 due</font> <br /> <font color="DarkMagenta">Homework 7 out</font> </td><td class="c4">  </td></tr>
-<tr class="r23"><td class="c1">Discussion </td><td class="c2"> 3/18 </td><td class="c3"> Iris Recognition  </td><td class="c4">  </td></tr>
-<tr class="r24"><td class="c1">Lecture 11 </td><td class="c2"> 3/23 </td><td class="c3"> Face Presentation Attack Detection <br /> <font color="DarkMagenta">Homework 7 due</font> <br /> <font color="DarkMagenta">Homework 8 out</font> </td><td class="c4">  </td></tr>
-<tr class="r25"><td class="c1">Discussion </td><td class="c2"> 3/25 </td><td class="c3"> Face Presentation Attack Detection </td><td class="c4">  </td></tr>
-<tr class="r26"><td class="c1">Lecture 12 </td><td class="c2"> 3/30 </td><td class="c3">Iris Presentation Attack Detection <br /> <font color="DarkMagenta">Final Project Report out</font></td><td class="c4">  </td></tr>
-<tr class="r27"><td class="c1">Discussion </td><td class="c2"> 4/1 </td><td class="c3"> Iris Presentation Attack Detection </td><td class="c4">  </td></tr>
-<tr class="r28"><td class="c1">Lecture 13 </td><td class="c2"> 4/6 </td><td class="c3"> Fingerprint Presentation Attack Detection (Guest Lecture) </td><td class="c4">  </td></tr>
-<tr class="r29"><td class="c1">Discussion </td><td class="c2"> 4/8 </td><td class="c3"> Fingerprint Presentation Attack Detection </td><td class="c4">  </td></tr>
-<tr class="r30"><td class="c1">TBD </td><td class="c2"> 4/13 </td><td class="c3">  </td><td class="c4">  </td></tr>
-<tr class="r31"><td class="c1">TBD </td><td class="c2"> 4/15 </td><td class="c3">  <font color="DarkMagenta">Final Project Report due</font> </td><td class="c4">  </td></tr>
+<tr class="r20"><td class="c1">Lecture 10  </td><td class="c2"> 3/9 </td><td class="c3">  Face Recognition, part III</td><td class="c4">  </td></tr>
+<tr class="r21"><td class="c1">Discussion </td><td class="c2"> 3/11 </td><td class="c3"> Face Recognition</td><td class="c4">  </td></tr>
+<tr class="r22"><td class="c1">Lecture 11 </td><td class="c2"> 3/16 </td><td class="c3"> Fingerprint Recognition (Guest Lecture) <br /> <font color="DarkMagenta">Homework 5 due</font> <br /> <font color="DarkMagenta">Homework 6 out</font> </td><td class="c4">  </td></tr>
+<tr class="r23"><td class="c1">Discussion </td><td class="c2"> 3/18 </td><td class="c3"> Fingerprint Recognition  </td><td class="c4">  </td></tr>
+<tr class="r24"><td class="c1">Lecture 12 </td><td class="c2"> 3/23 </td><td class="c3"> Iris Recognition <br /> <font color="DarkMagenta">Homework 6 due</font> <br /> <font color="DarkMagenta">Homework 7 out</font> </td><td class="c4">  </td></tr>
+<tr class="r25"><td class="c1">Discussion </td><td class="c2"> 3/25 </td><td class="c3"> Iris Recognition  </td><td class="c4">  </td></tr>
+<tr class="r26"><td class="c1">Lecture 13 </td><td class="c2"> 3/30 </td><td class="c3"> Face Presentation Attack Detection <br /> <font color="DarkMagenta">Homework 7 due</font> <br /> <font color="DarkMagenta">Homework 8 out</font> </td><td class="c4">  </td></tr>
+<tr class="r27"><td class="c1">Discussion </td><td class="c2"> 4/1 </td><td class="c3"> Face Presentation Attack Detection </td><td class="c4">  </td></tr>
+<tr class="r28"><td class="c1">Lecture 14 </td><td class="c2"> 4/6 </td><td class="c3">Iris Presentation Attack Detection <br /> <font color="DarkMagenta">Final Project Report out</font></td><td class="c4">  </td></tr>
+<tr class="r29"><td class="c1">Discussion </td><td class="c2"> 4/8 </td><td class="c3"> Iris Presentation Attack Detection </td><td class="c4">  </td></tr>
+<tr class="r30"><td class="c1">Lecture 15 </td><td class="c2"> 4/13 </td><td class="c3"> Fingerprint Presentation Attack Detection (Guest Lecture) </td><td class="c4">  </td></tr>
+<tr class="r31"><td class="c1">Discussion </td><td class="c2"> 4/15 </td><td class="c3"> Fingerprint Presentation Attack Detection <br /><font color="DarkMagenta">Final Project Report due</font> </td><td class="c4">  </td></tr>
 <tr class="r32"><td class="c1">Final Presentation </td><td class="c2"> 4/20 </td><td class="c3">  </td><td class="c4">  </td></tr>
 <tr class="r33"><td class="c1">Final Presentation </td><td class="c2"> 4/22 </td><td class="c3">  </td><td class="c4">  </td></tr>
 <tr class="r34"><td class="c1">Final Presentation </td><td class="c2"> 4/27 </td><td class="c3">  </td><td class="c4">  </td></tr>
@@ -97,7 +97,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-11-21 21:41:56 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2019-11-21 21:56:13 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
