--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
 <tr class="r18"><td class="c1">Spring Break </td><td class="c2"> 3/2 </td><td class="c3"> No Class <br /> </td><td class="c4">  </td></tr>
 <tr class="r19"><td class="c1">Spring Break </td><td class="c2"> 3/4 </td><td class="c3"> No Class </td><td class="c4">  </td></tr>
 <tr class="r20"><td class="c1">Lecture 10  </td><td class="c2"> 3/9 </td><td class="c3">  Face Recognition, part III</td><td class="c4">  </td></tr>
-<tr class="r21"><td class="c1">Discussion </td><td class="c2"> 3/11 </td><td class="c3"> Face Recognition</td><td class="c4">  </td></tr>
+<tr class="r21"><td class="c1">Discussion </td><td class="c2"> 3/11 </td><td class="c3"> Face Recognition</td><td class="c4"> <br /> <font color="DarkMagenta">Final Project Proposal</font> </td></tr>
 <tr class="r22"><td class="c1">Lecture 11 </td><td class="c2"> 3/16 </td><td class="c3"> Fingerprint Recognition (Guest Lecture) <br /> <font color="DarkMagenta">Homework 5 due</font> <br /> <font color="DarkMagenta">Homework 6 out</font> </td><td class="c4">  </td></tr>
 <tr class="r23"><td class="c1">Discussion </td><td class="c2"> 3/18 </td><td class="c3"> Fingerprint Recognition  </td><td class="c4">  </td></tr>
 <tr class="r24"><td class="c1">Lecture 12 </td><td class="c2"> 3/23 </td><td class="c3"> Iris Recognition <br /> <font color="DarkMagenta">Homework 6 due</font> <br /> <font color="DarkMagenta">Homework 7 out</font> </td><td class="c4">  </td></tr>
 <tr class="r25"><td class="c1">Discussion </td><td class="c2"> 3/25 </td><td class="c3"> Iris Recognition  </td><td class="c4">  </td></tr>
 <tr class="r26"><td class="c1">Lecture 13 </td><td class="c2"> 3/30 </td><td class="c3"> Face Presentation Attack Detection <br /> <font color="DarkMagenta">Homework 7 due</font> <br /> <font color="DarkMagenta">Homework 8 out</font> </td><td class="c4">  </td></tr>
 <tr class="r27"><td class="c1">Discussion </td><td class="c2"> 4/1 </td><td class="c3"> Face Presentation Attack Detection </td><td class="c4">  </td></tr>
-<tr class="r28"><td class="c1">Lecture 14 </td><td class="c2"> 4/6 </td><td class="c3">Iris Presentation Attack Detection <br /> <font color="DarkMagenta">Final Project Report out</font></td><td class="c4">  </td></tr>
+<tr class="r28"><td class="c1">Lecture 14 </td><td class="c2"> 4/6 </td><td class="c3">Iris Presentation Attack Detection </td><td class="c4">  </td></tr>
 <tr class="r29"><td class="c1">Discussion </td><td class="c2"> 4/8 </td><td class="c3"> Iris Presentation Attack Detection </td><td class="c4">  </td></tr>
 <tr class="r30"><td class="c1">Lecture 15 </td><td class="c2"> 4/13 </td><td class="c3"> Fingerprint Presentation Attack Detection (Guest Lecture) </td><td class="c4">  </td></tr>
 <tr class="r31"><td class="c1">Discussion </td><td class="c2"> 4/15 </td><td class="c3"> Fingerprint Presentation Attack Detection <br /><font color="DarkMagenta">Final Project Report due</font> </td><td class="c4">  </td></tr>
@@ -97,7 +97,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-11-21 21:56:13 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2019-11-21 22:02:41 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
