--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <tr class="r18"><td class="c1">Spring Break </td><td class="c2"> 3/2 </td><td class="c3"> No Class <br /> </td><td class="c4">  </td></tr>
 <tr class="r19"><td class="c1">Spring Break </td><td class="c2"> 3/4 </td><td class="c3"> No Class </td><td class="c4">  </td></tr>
 <tr class="r20"><td class="c1">Lecture 10  </td><td class="c2"> 3/9 </td><td class="c3">  Face Recognition, part III</td><td class="c4">  </td></tr>
-<tr class="r21"><td class="c1">Discussion </td><td class="c2"> 3/11 </td><td class="c3"> Face Recognition</td><td class="c4"> <br /> <font color="DarkMagenta">Final Project Proposal</font> </td></tr>
+<tr class="r21"><td class="c1">Discussion </td><td class="c2"> 3/11 </td><td class="c3"> Face Recognition <br /> <font color="DarkMagenta">Final Project Proposal</font></td><td class="c4">  </td></tr>
 <tr class="r22"><td class="c1">Lecture 11 </td><td class="c2"> 3/16 </td><td class="c3"> Fingerprint Recognition (Guest Lecture) <br /> <font color="DarkMagenta">Homework 5 due</font> <br /> <font color="DarkMagenta">Homework 6 out</font> </td><td class="c4">  </td></tr>
 <tr class="r23"><td class="c1">Discussion </td><td class="c2"> 3/18 </td><td class="c3"> Fingerprint Recognition  </td><td class="c4">  </td></tr>
 <tr class="r24"><td class="c1">Lecture 12 </td><td class="c2"> 3/23 </td><td class="c3"> Iris Recognition <br /> <font color="DarkMagenta">Homework 6 due</font> <br /> <font color="DarkMagenta">Homework 7 out</font> </td><td class="c4">  </td></tr>
@@ -97,7 +97,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-11-21 22:02:41 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2019-11-21 22:03:58 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
