--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 <h2>Tentative Schedule</h2>
 <table id="TABLENAME">
 <tr class="r1"><td class="c1"><b>Event Type</b>  </td><td class="c2"> <b>Date</b> </td><td class="c3"> <b>Description</b> </td><td class="c4"> <b>Course Materials</b> </td></tr>
-<tr class="r2"><td class="c1">Lecture 1 </td><td class="c2"> 1/6 </td><td class="c3"> Introduction to Biometrics, part I </td><td class="c4">  </td></tr>
-<tr class="r3"><td class="c1">Lecture 2 </td><td class="c2"> 1/8 </td><td class="c3"> Introduction to Biometrics, part II </td><td class="c4">  </td></tr>
-<tr class="r4"><td class="c1">Lecture 3 </td><td class="c2"> 1/13 </td><td class="c3"> Convolutional Neural Networks <br /> <font color="DarkMagenta">Homework 1 out</font> </td><td class="c4">  </td></tr>
+<tr class="r2"><td class="c1">Lecture 1 </td><td class="c2"> 1/6 </td><td class="c3"> Introduction to Biometrics</td><td class="c4">  </td></tr>
+<tr class="r3"><td class="c1">Lecture 2 </td><td class="c2"> 1/8 </td><td class="c3"> Convolutional Neural Networks, part I </td><td class="c4">  </td></tr>
+<tr class="r4"><td class="c1">Lecture 3 </td><td class="c2"> 1/13 </td><td class="c3"> Convolutional Neural Networks, part II <br /> <font color="DarkMagenta">Homework 1 out</font> </td><td class="c4">  </td></tr>
 <tr class="r5"><td class="c1">Discussion </td><td class="c2"> 1/15 </td><td class="c3"> Convolutional Neural Networks </td><td class="c4">  </td></tr>
 <tr class="r6"><td class="c1">Holiday </td><td class="c2"> 1/20 </td><td class="c3"> No Class </td><td class="c4">  </td></tr>
 <tr class="r7"><td class="c1">Lecture 4 </td><td class="c2"> 1/22 </td><td class="c3"> Generative Adversarial Networks <br /> <font color="DarkMagenta">Homework 1 due</font> <br /> <font color="DarkMagenta">Homework 2 out</font> </td><td class="c4">  </td></tr>
@@ -73,7 +73,7 @@
 <ul>
 <li><p>Face Detection</p>
 <ul>
-<li><p>Methods: CascadeCNN, Faster-RCNN || SSD, YOLO, SSH, RetinaFace</p>
+<li><p>Methods: CascadeCNN, <a href="https://arxiv.org/pdf/1606.03473v1.pdf">Faster-RCNN</a> || <a href="https://arxiv.org/pdf/1708.05234.pdf">FaceBoxes</a>, SSD, YOLO, <a href="https://arxiv.org/pdf/1708.03979.pdf">SSH</a>, <a href="https://arxiv.org/pdf/1905.00641.pdf">RetinaFace</a></p>
 </li>
 <li><p>Datasets: FDDB, <a href="http://shuoyang1213.me/WIDERFACE/WiderFace_Results.html">WIDER FACE</a></p>
 </li></ul>
@@ -97,7 +97,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-11-22 09:30:54 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2019-12-05 17:54:39 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
