--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </li>
 </ul>
 <h2>Course Description</h2>
-<p>This will be a seminar-style course where students will be assigned a number of papers to read. Students will then be expected to submit critiques for these papers as well as present these papers during the lecture. The papers will cover salient topics in biometrics and deep learning. These include concepts in face detection and alignment, face recognition, face anti-spoofing, iris recognition, fingerprint recognition and deep learning. The project component of this course will test the student’s ability to design deep learning solutions for biometrics applications.</p>
+<p>This will be a seminar-style course where students will be assigned a number of papers to read. Students will then be expected to submit critiques for these papers as well as present these papers during the lecture. The papers will cover salient topics in biometrics and deep learning. These include concepts in face detection and alignment, face recognition, face anti-spoofing, iris recognition, fingerprint recognition and deep learning. The project component of this course will test the student’s ability to design deep learning solutions for biometrics applications. Please find <a href="syllabus/CS891_002_Syllabus.pdf">syllabus</a> here. </p>
 <h2>Optional Textbooks</h2>
 <p>This will be a seminar-style course, where students will be assigned a number of papers to read. The following textbooks are optional.</p>
 <ul>
@@ -97,7 +97,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-01-05 16:27:28 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-01-06 12:21:00 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
