--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <h2>Tentative Schedule</h2>
 <table id="TABLENAME">
 <tr class="r1"><td class="c1"><b>Event Type</b>  </td><td class="c2"> <b>Date</b> </td><td class="c3"> <b>Description</b> </td><td class="c4"> <b>Course Materials</b> </td></tr>
-<tr class="r2"><td class="c1">Lecture 1 </td><td class="c2"> 1/6 </td><td class="c3"> Introduction to Biometrics</td><td class="c4"> <a href="slides/cse891_2020_lecture01_introduction.pdf">slides/cse891_2020_lecture01_introduction.pdf</a> </td></tr>
+<tr class="r2"><td class="c1">Lecture 1 </td><td class="c2"> 1/6 </td><td class="c3"> Introduction to Biometrics</td><td class="c4"> <a href="https://drive.google.com/file/d/1_-GtEGBPSNe8he9YHfek3tjH8P8Aavq8/view?usp=sharing">Lecture01</a> </td></tr>
 <tr class="r3"><td class="c1">Lecture 2 </td><td class="c2"> 1/8 </td><td class="c3"> Convolutional Neural Networks, part I <br /> <font color="DarkMagenta">Homework 1 out</font> </td><td class="c4">  </td></tr>
 <tr class="r4"><td class="c1">Lecture 3 </td><td class="c2"> 1/13 </td><td class="c3"> Convolutional Neural Networks, part II  </td><td class="c4">  </td></tr>
 <tr class="r5"><td class="c1">Discussion </td><td class="c2"> 1/15 </td><td class="c3"> CNNs <br /> <font color="DarkMagenta">Homework 1 due</font> </td><td class="c4">  </td></tr>
@@ -97,7 +97,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-01-06 16:45:01 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-01-06 16:50:50 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
