--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 <tr class="r22"><td class="c1">Lecture 12 </td><td class="c2"> 3/16 </td><td class="c3"> Face Presentation Attack Detection, part I <br /> <font color="DarkMagenta">Homework 6 out</font> </td><td class="c4">  </td></tr>
 <tr class="r23"><td class="c1">Lecture 13 </td><td class="c2"> 3/18 </td><td class="c3"> Face Presentation Attack Detection, part II </td><td class="c4">  </td></tr>
 <tr class="r24"><td class="c1">Discussion </td><td class="c2"> 3/23 </td><td class="c3"> Face PAD <br /> <font color="DarkMagenta">Homework 6 due</font> </td><td class="c4">  </td></tr>
-<tr class="r25"><td class="c1">Lecture 14 </td><td class="c2"> 3/25 </td><td class="c3"> Fingerprint Recognition <br /> <font color="DarkMagenta">Homework 7 out</font> </td><td class="c4">   </td></tr>
-<tr class="r26"><td class="c1">Lecture 15 </td><td class="c2"> 3/30 </td><td class="c3"> Fingerprint PAD  </td><td class="c4">  </td></tr>
+<tr class="r25"><td class="c1">Lecture 14 </td><td class="c2"> 3/25 </td><td class="c3"> Fingerprint Recognition (Guest Lecture) <br /> <font color="DarkMagenta">Homework 7 out</font> </td><td class="c4">   </td></tr>
+<tr class="r26"><td class="c1">Lecture 15 </td><td class="c2"> 3/30 </td><td class="c3"> Fingerprint PAD (Guest Lecture) </td><td class="c4">  </td></tr>
 <tr class="r27"><td class="c1">Discussion </td><td class="c2"> 4/1 </td><td class="c3"> Fingerprint <br /> <font color="DarkMagenta">Homework 7 due</font></td><td class="c4">  </td></tr>
 <tr class="r28"><td class="c1">Lecture 16</td><td class="c2"> 4/6 </td><td class="c3">Iris Recognition <br /> <font color="DarkMagenta">Homework 8 out</font> </td><td class="c4">  </td></tr>
 <tr class="r29"><td class="c1">Lecture 17 </td><td class="c2"> 4/8 </td><td class="c3"> Iris PAD </td><td class="c4">  </td></tr>
@@ -97,7 +97,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-01-06 16:50:50 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-01-06 17:08:12 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
