--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <tr class="r1"><td class="c1"><b>Event Type</b>  </td><td class="c2"> <b>Date</b> </td><td class="c3"> <b>Description</b> </td><td class="c4"> <b>Course Materials</b> </td></tr>
 <tr class="r2"><td class="c1">Lecture 1 </td><td class="c2"> 1/6 </td><td class="c3"> Introduction to Biometrics</td><td class="c4"> <a href="https://drive.google.com/file/d/1_-GtEGBPSNe8he9YHfek3tjH8P8Aavq8/view?usp=sharing">Slides</a> </td></tr>
 <tr class="r3"><td class="c1">Lecture 2 </td><td class="c2"> 1/8 </td><td class="c3"> Convolutional Neural Networks, part I <br /> <font color="DarkMagenta">Homework 1 out</font> </td><td class="c4"> <a href="https://drive.google.com/file/d/1Z5uvkKPt_7bLEaKF3OHXHNMgoH5BDWNI/view?usp=sharing">Slides</a> <br /> <a href="homework/HW1.pdf">Homework 1</a></td></tr>
-<tr class="r4"><td class="c1">Lecture 3 </td><td class="c2"> 1/13 </td><td class="c3"> Convolutional Neural Networks, part II  </td><td class="c4"> <a href="https://github.com/pytorch/examples/tree/master/imagenet">ImageNet Training</a> <br /> <a href="https://pytorch.org/tutorials/beginner/transfer_learning_tutorial.html">Transfer Learning Tutorial</a> <br /> <a href="https://arxiv.org/abs/1812.01187">Bag of Tricks</a> </td></tr>
+<tr class="r4"><td class="c1">Lecture 3 </td><td class="c2"> 1/13 </td><td class="c3"> Convolutional Neural Networks, part II  </td><td class="c4"> <a href="https://drive.google.com/file/d/1vCaILNHaysvLxq7MpaMOC3ZHPClTXrli/view?usp=sharing">Slides</a><br /> <a href="https://github.com/pytorch/examples/tree/master/imagenet">ImageNet Training</a> <br /> <a href="https://pytorch.org/tutorials/beginner/transfer_learning_tutorial.html">Transfer Learning Tutorial</a> <br /> <a href="https://arxiv.org/abs/1812.01187">Bag of Tricks</a> </td></tr>
 <tr class="r5"><td class="c1">Discussion </td><td class="c2"> 1/15 </td><td class="c3"> CNNs <br /> <font color="DarkMagenta">Homework 1 due</font> </td><td class="c4">  </td></tr>
 <tr class="r6"><td class="c1">Holiday </td><td class="c2"> 1/20 </td><td class="c3"> No Class </td><td class="c4">  </td></tr>
 <tr class="r7"><td class="c1">Lecture 4 </td><td class="c2"> 1/22 </td><td class="c3"> Generative Adversarial Networks, part I  <br /> <font color="DarkMagenta">Homework 2 out</font> </td><td class="c4">  </td></tr>
@@ -97,7 +97,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-01-12 20:39:23 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-01-13 19:09:19 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
