--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <tr class="r4"><td class="c1">Lecture 3 </td><td class="c2"> 1/13 </td><td class="c3"> Convolutional Neural Networks, part II  </td><td class="c4"> <a href="https://drive.google.com/file/d/1vCaILNHaysvLxq7MpaMOC3ZHPClTXrli/view?usp=sharing">Slides</a><br /> <a href="https://github.com/pytorch/examples/tree/master/imagenet">ImageNet Training</a> <br /> <a href="https://pytorch.org/tutorials/beginner/transfer_learning_tutorial.html">Transfer Learning Tutorial</a> <br /> <a href="https://arxiv.org/abs/1812.01187">Bag of Tricks</a> </td></tr>
 <tr class="r5"><td class="c1">Discussion </td><td class="c2"> 1/15 </td><td class="c3"> CNNs <br /> <font color="DarkMagenta">Homework 1 due</font> </td><td class="c4">  </td></tr>
 <tr class="r6"><td class="c1">Holiday </td><td class="c2"> 1/20 </td><td class="c3"> No Class </td><td class="c4">  </td></tr>
-<tr class="r7"><td class="c1">Lecture 4 </td><td class="c2"> 1/22 </td><td class="c3"> Generative Adversarial Networks, part I  <br /> <font color="DarkMagenta">Homework 2 out</font> </td><td class="c4"> <a href="https://drive.google.com/file/d/1g90wi1tRkmOE2xaguyqbyYtYrcZqiyPA/view?usp=sharing">Slides</a> <br /> <a href="homework/HW2.pdf">Homework 2</a> </td></tr>
+<tr class="r7"><td class="c1">Lecture 4 </td><td class="c2"> 1/22 </td><td class="c3"> Generative Adversarial Networks, part I  <br /> <font color="DarkMagenta">Homework 2 out</font> </td><td class="c4"> <a href="https://drive.google.com/file/d/1g90wi1tRkmOE2xaguyqbyYtYrcZqiyPA/view?usp=sharing">Slides</a> <br /> <a href="homework/HW2.pdf">Homework 2</a> <br /> <a href="https://pytorch.org/tutorials/beginner/dcgan_faces_tutorial.html">DCGAN</a> </td></tr>
 <tr class="r8"><td class="c1">Lecture 5 </td><td class="c2"> 1/27 </td><td class="c3"> Generative Adversarial Networks, part II </td><td class="c4"> <a href="https://github.com/junyanz/pytorch-CycleGAN-and-pix2pix">CycleGAN and Pix2Pix</a> </td></tr>
 <tr class="r9"><td class="c1">Discussion </td><td class="c2"> 1/29 </td><td class="c3"> GANs <br /> <font color="DarkMagenta">Homework 2 due</font> </td><td class="c4">  </td></tr>
 <tr class="r10"><td class="c1">Lecture 6 </td><td class="c2"> 2/3 </td><td class="c3"> Face Detection, part I  <br /> <font color="DarkMagenta">Homework 3 out</font> </td><td class="c4">  </td></tr>
@@ -82,7 +82,7 @@
 <ul>
 <li><p>Methods: MTCNN</p>
 </li>
-<li><p>Datasets: <a href="https://ibug.doc.ic.ac.uk/resources/300-W/">300W</a>, <a href="https://ibug.doc.ic.ac.uk/resources/300-VW/">300-VW</a>, <a href="https://wywu.github.io/projects/LAB/WFLW.html">WFLW</a></p>
+<li><p>Datasets: <a href="https://ibug.doc.ic.ac.uk/resources/300-W/">300W</a>, <a href="https://ibug.doc.ic.ac.uk/resources/300-VW/">300-VW</a>, AFLW, <a href="https://wywu.github.io/projects/LAB/WFLW.html">WFLW</a></p>
 </li></ul>
 </li>
 <li><p>Face Recognition</p>
@@ -97,7 +97,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-01-22 18:47:45 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-01-27 12:12:22 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
