--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 <tr class="r7"><td class="c1">Lecture 4 </td><td class="c2"> 1/22 </td><td class="c3"> Generative Adversarial Networks, part I  <br /> <font color="DarkMagenta">Homework 2 out</font> </td><td class="c4"> <a href="https://drive.google.com/file/d/1g90wi1tRkmOE2xaguyqbyYtYrcZqiyPA/view?usp=sharing">Slides</a> <br /> <a href="homework/HW2.pdf">Homework 2</a> <br /> <a href="https://pytorch.org/tutorials/beginner/dcgan_faces_tutorial.html">DCGAN</a> </td></tr>
 <tr class="r8"><td class="c1">Lecture 5 </td><td class="c2"> 1/27 </td><td class="c3"> Generative Adversarial Networks, part II </td><td class="c4"> <a href="https://drive.google.com/file/d/1wP4hl4H_ADxV2abVEL2XoP1Okxv3C1LZ/view?usp=sharing">Slides</a> <br /> <a href="https://github.com/junyanz/pytorch-CycleGAN-and-pix2pix">CycleGAN and Pix2Pix</a> </td></tr>
 <tr class="r9"><td class="c1">Discussion </td><td class="c2"> 1/29 </td><td class="c3"> GANs <br /> <font color="DarkMagenta">Homework 2 due</font> </td><td class="c4">  </td></tr>
-<tr class="r10"><td class="c1">Lecture 6 </td><td class="c2"> 2/3 </td><td class="c3"> Face Detection, part I  <br /> <font color="DarkMagenta">Homework 3 out</font> </td><td class="c4">  </td></tr>
+<tr class="r10"><td class="c1">Lecture 6 </td><td class="c2"> 2/3 </td><td class="c3"> Face Detection, part I  <br /> <font color="DarkMagenta">Homework 3 out</font> </td><td class="c4"> homework/HW3.pdf Homework 3] </td></tr>
 <tr class="r11"><td class="c1">Lecture 7 </td><td class="c2"> 2/5 </td><td class="c3"> Face Detection, part II </td><td class="c4">  </td></tr>
-<tr class="r12"><td class="c1">Discussion </td><td class="c2"> 2/10 </td><td class="c3"> Face Detection <br /> <font color="DarkMagenta">Homework 3 due</font> </td><td class="c4"> <a href="homework/HW3.pdf">Homework 3</a> </td></tr>
+<tr class="r12"><td class="c1">Discussion </td><td class="c2"> 2/10 </td><td class="c3"> Face Detection <br /> <font color="DarkMagenta">Homework 3 due</font> </td><td class="c4"> [ </td></tr>
 <tr class="r13"><td class="c1">Lecture 8 </td><td class="c2"> 2/12 </td><td class="c3"> Face Alignment, part I  <br /> <font color="DarkMagenta">Homework 4 out</font> </td><td class="c4">  </td></tr>
 <tr class="r14"><td class="c1">Lecture 9 </td><td class="c2"> 2/17 </td><td class="c3"> Face Alignment, part II </td><td class="c4">  </td></tr>
 <tr class="r15"><td class="c1">Discussion </td><td class="c2"> 2/19 </td><td class="c3"> Face Alignment <br /> <font color="DarkMagenta">Homework 4 due</font> </td><td class="c4">  </td></tr>
@@ -97,7 +97,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-02-03 14:39:42 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-02-03 14:41:40 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
