--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 </li>
 <li><p>Face Alignment</p>
 <ul>
-<li><p>Methods: MTCNN</p>
+<li><p>Methods: MTCNN, <a href="http://openaccess.thecvf.com/content_cvpr_2017_workshops/w33/papers/Yang_Stacked_Hourglass_Network_CVPR_2017_paper.pdf">Hourglass</a>, <a href="https://arxiv.org/abs/1711.06753">Wing Loss</a>, <a href="https://arxiv.org/abs/1902.10859">PFLD</a>, <a href="http://openaccess.thecvf.com/content_ICCV_2019/papers/Wang_Adaptive_Wing_Loss_for_Robust_Face_Alignment_via_Heatmap_Regression_ICCV_2019_paper.pdf">Heat Map</a></p>
 </li>
 <li><p>Datasets: <a href="https://ibug.doc.ic.ac.uk/resources/300-W/">300W</a>, <a href="https://ibug.doc.ic.ac.uk/resources/300-VW/">300-VW</a>, AFLW, <a href="https://wywu.github.io/projects/LAB/WFLW.html">WFLW</a></p>
 </li></ul>
@@ -97,7 +97,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-02-05 17:29:49 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-02-06 13:42:29 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
