--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
 </li>
 <li><p>Face Alignment</p>
 <ul>
-<li><p>Methods: MTCNN, <a href="http://openaccess.thecvf.com/content_cvpr_2017_workshops/w33/papers/Yang_Stacked_Hourglass_Network_CVPR_2017_paper.pdf">Hourglass</a>, <a href="https://arxiv.org/abs/1711.06753">Wing Loss</a>, <a href="https://arxiv.org/abs/1902.10859">PFLD</a>, <a href="http://openaccess.thecvf.com/content_ICCV_2019/papers/Wang_Adaptive_Wing_Loss_for_Robust_Face_Alignment_via_Heatmap_Regression_ICCV_2019_paper.pdf">Heat Map</a></p>
+<li><p>Methods: <a href="https://arxiv.org/pdf/1604.02878.pdf">MTCNN</a>, <a href="https://arxiv.org/abs/1902.10859">PFLD</a>, <a href="https://arxiv.org/abs/1711.06753">Wing Loss</a> || <a href="https://arxiv.org/pdf/1603.06937.pdf">Hourglass</a>, <a href="https://arxiv.org/abs/1812.01936">U-Net</a>, <a href="https://arxiv.org/abs/1805.10483">LAB</a>, <a href="https://arxiv.org/pdf/1803.04108.pdf">SAN</a></p>
 </li>
-<li><p>Datasets: <a href="https://ibug.doc.ic.ac.uk/resources/300-W/">300W</a>, <a href="https://ibug.doc.ic.ac.uk/resources/300-VW/">300-VW</a>, AFLW, <a href="https://wywu.github.io/projects/LAB/WFLW.html">WFLW</a></p>
+<li><p>Datasets: <a href="https://ibug.doc.ic.ac.uk/resources/300-W/">300W</a>, <a href="https://ibug.doc.ic.ac.uk/resources/2nd-facial-landmark-tracking-competition-menpo-ben/">Menpo</a>, <a href="https://ibug.doc.ic.ac.uk/resources/300-VW/">300-VW</a>, <a href="https://www.tugraz.at/institute/icg/research/team-bischof/lrs/downloads/aflw/">AFLW</a>, <a href="https://wywu.github.io/projects/LAB/WFLW.html">WFLW</a></p>
 </li></ul>
 </li>
 <li><p>Face Recognition</p>
@@ -97,7 +97,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-02-06 13:42:29 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-02-11 20:30:57 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
