--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <tr class="r10"><td class="c1">Lecture 6 </td><td class="c2"> 2/3 </td><td class="c3"> Face Detection, part I  <br /> <font color="DarkMagenta">Homework 3 out</font> </td><td class="c4"> <a href="https://drive.google.com/file/d/1UB5C0xj_mhVIAFFFNoa6LQxx_BVW3kHC/view?usp=sharing">Slides</a> <br /> <a href="homework/HW3.pdf">Homework 3</a> </td></tr>
 <tr class="r11"><td class="c1">Lecture 7 </td><td class="c2"> 2/5 </td><td class="c3"> Face Detection, part II </td><td class="c4"> <a href="https://drive.google.com/file/d/1Fc4HVmcPI5spMCqQXlLTcaTdqrjaOc3c/view?usp=sharing">Slides</a> </td></tr>
 <tr class="r12"><td class="c1">Discussion </td><td class="c2"> 2/10 </td><td class="c3"> Face Detection <br /> <font color="DarkMagenta">Homework 3 due</font> </td><td class="c4">   </td></tr>
-<tr class="r13"><td class="c1">Lecture 8 </td><td class="c2"> 2/12 </td><td class="c3"> Face Alignment, part I  <br /> <font color="DarkMagenta">Homework 4 out</font> </td><td class="c4"> <a href="homework/HW4.pdf">Homework 4</a> </td></tr>
+<tr class="r13"><td class="c1">Lecture 8 </td><td class="c2"> 2/12 </td><td class="c3"> Face Alignment, part I  <br /> <font color="DarkMagenta">Homework 4 out</font> </td><td class="c4"> <a href="https://drive.google.com/file/d/1EUaRoze842z934M-Ko5FuBC4qZoI-UNY/view?usp=sharing">Slides</a> <br /> <a href="homework/HW4.pdf">Homework 4</a> </td></tr>
 <tr class="r14"><td class="c1">Lecture 9 </td><td class="c2"> 2/17 </td><td class="c3"> Face Alignment, part II </td><td class="c4">  </td></tr>
 <tr class="r15"><td class="c1">Discussion </td><td class="c2"> 2/19 </td><td class="c3"> Face Alignment <br /> <font color="DarkMagenta">Homework 4 due</font> </td><td class="c4">  </td></tr>
 <tr class="r16"><td class="c1">Lecture 10 </td><td class="c2"> 2/24 </td><td class="c3"> Face Recognition, part I <br /> <font color="DarkMagenta">Homework 5 out</font> </td><td class="c4">  </td></tr>
@@ -97,7 +97,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-02-12 20:51:00 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-02-12 20:58:04 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
